--- a/filmHub/Views/Producers/Create.cshtml
+++ b/filmHub/Views/Producers/Create.cshtml
@@ -1,39 +1,43 @@
-﻿@model Actor
+﻿@model Producer
 
 @{
-    ViewData["Title"] = "Details of the actor";
+    ViewData["Title"] = "Add a new producer";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Details for @Model.FullName</h1>
+            <h1>Add a New Producer</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
-              
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger">
+                    </div>
+
                     <div class="form-group text-center">
                         <img id="ProfilePicturePreview" />
                     </div>
                     <div class="form-group">
                         <label asp-for="ProfilePictureUrl" class="control-label">  </label>
-                        <input asp-for="ProfilePictureUrl" class="form-control"  readonly/>
+                        <input asp-for="ProfilePictureUrl" class="form-control" />
                         <span asp-validation-for="ProfilePictureUrl" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="FullName" class="control-label">  </label>
-                        <input asp-for="FullName" class="form-control" readonly/>
+                        <input asp-for="FullName" class="form-control" />
                         <span asp-validation-for="FullName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Bio" class="control-label">  </label>
-                        <input asp-for="Bio" class="form-control" readonly/>
+                        <input asp-for="Bio" class="form-control" />
                         <span asp-validation-for="Bio" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <a class ="btn btn-outline-success float-end" asp-action ="Edit" asp-route-id="@Model.Id">Edit</a>
+                        <input type="submit" value="Create" class="btn btn-outline-success float-end" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
+                </form>
             </div>
         </div>
     </div>
@@ -44,6 +48,10 @@
     $(document).ready(function(){
         var output = document.getElementById('ProfilePicturePreview');
         output.src = $("#ProfilePictureUrl").val();
+    })
+    $("#ProfilePictureUrl").on("change",function(){
+        var output = document.getElementById('ProfilePicturePreview');
+        output.src = $(this).val();
     })
 </script>
 }
