--- a/filmHub/Views/Shared/_Layout.cshtml
+++ b/filmHub/Views/Shared/_Layout.cshtml
@@ -34,7 +34,13 @@
                                 <a class="dropdown-item" asp-controller="Actors" asp-action="Index"><i class="bi bi-person-square"></i> Actors</a>
                             </div>
                         </li>
+
                     </ul>
+                    <form class="d-flex" asp-controller="Movies" asp-action="Filter">
+                        <input class="form-control me-2" type="text" name="searchString" aria-label="Recipient's username" aria-describedby="button-addon2" placeholder="Search">
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </form>
+
                 </div>
             </div>
         </nav>
