--- a/filmHub/Views/Shared/_Layout.cshtml
+++ b/filmHub/Views/Shared/_Layout.cshtml
@@ -40,7 +40,18 @@
                         <input class="form-control me-2" type="text" name="searchString" aria-label="Recipient's username" aria-describedby="button-addon2" placeholder="Search">
                         <button class="btn btn-primary" type="submit">Search</button>
                     </form>
+                    <ul class="navbar-nav"> 
+                        @await Component.InvokeAsync("ShoppingCartSummary")
+                    </ul>
 
+                    <div class ="dropdown">
+                        <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" data-bs-toggle="dropdown" aria-expanded="false" ><i class ="bi bi-person-badge"></i>Hello User</button>
+                        <ul class ="dropdown-menu" aria-labelledby="profile-btn">
+                            <li>
+                                <a class ="dropdown-item" asp-controller="Orders" asp-action="Index"><i class="bi bi-list"></i>Orders</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
