--- a/filmHub/Views/Cinemas/Details.cshtml
+++ b/filmHub/Views/Cinemas/Details.cshtml
@@ -31,8 +31,11 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
                         <a class ="btn btn-outline-success float-end" asp-action ="Edit" asp-route-id="@Model.Id">Edit</a>
-                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
+                    }
+                    <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
             </div>
         </div>
