--- a/filmHub/Views/Producers/Index.cshtml
+++ b/filmHub/Views/Producers/Index.cshtml
@@ -5,13 +5,16 @@
 }
 <div class="row">
     <div class="col-md-8 offset-md-2">
-        <table class = "table">
+        <table class="table">
             <thead>
-                <tr >
+                <tr>
                     <th>@Html.DisplayNameFor(model => model.ProfilePictureUrl)</th>
                     <th>@Html.DisplayNameFor(model => model.FullName)</th>
                     <th>@Html.DisplayNameFor(model => model.Bio)</th>
-                    <th>Actions</th>
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <th>Actions</th>
+                    }
                 </tr>
             </thead>
             <tbody>
@@ -27,11 +30,14 @@
                         <td class="align-middle">
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
-                        <td class="align-middle">
-                            <a class = "btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class = "bi bi-pencil-square"></i>Edit</a> |
-                            <a class = "btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class = "bi bi-pencil-eye"></i>Details</a> |
-                            <a class = "btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id"><i class = "bi bi-trash"></i>Delete</a> 
-                        </td>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                        {
+                            <td class="align-middle">
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i>Edit</a> |
+                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-pencil-eye"></i>Details</a> |
+                                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash"></i>Delete</a>
+                            </td>
+                        }
                     </tr>
                 }
             </tbody>
