--- a/filmHub/Views/_ViewImports.cshtml
+++ b/filmHub/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using filmHub
 @using filmHub.Models
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
